# autorigami-

./: .gitignore  .gitmodules  README.md  data.csv  pyproject.toml
scripts/: collect_capsule_ring_sweep_metrics.py  run_capsule_ring_sweep.py
src/autorigami_cpp/: __init__.py  bezier_cli.py  bezier_postprocess.py  cli.py  wrapper.py
